<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Google LLC.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="search"
        android:icon="@drawable/ic_shortcut_search"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_search_short_label"
        android:shortcutLongLabel="@string/shortcut_search_long_label"
        android:shortcutDisabledMessage="@string/shortcut_search_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="io.plaidapp.search.ui.SearchActivity"
            android:targetPackage="io.plaidapp" />
    </shortcut>

</shortcuts>
