<!--
  Copyright 2015 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context="com.example.android.plaid.ui.DribbbleLogin">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:paddingStart="@dimen/padding_dialog"
        android:paddingTop="@dimen/padding_dialog"
        android:paddingEnd="@dimen/padding_dialog"
        android:paddingBottom="@dimen/padding_normal"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:elevation="@dimen/z_fab"
        android:background="@drawable/dialog_background"
        android:clickable="true">

        <com.example.android.plaid.ui.widget.BaselineGridTextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_spacing"
            android:text="@string/designer_news_login"
            style="@style/Widget.Plaid.DialogTitle" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/designer_news_link_highlight"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/permission_primer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_accounts_permission_primer_message"
            style="@style/Widget.Plaid.HintCheckBox" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_normal"
            android:enabled="false"
            android:text="@string/dn_login_action"
            android:textAppearance="@style/TextAppearance.DarkButton"
            android:onClick="doLogin" />

        <include layout="@layout/loading" />

    </LinearLayout>

</FrameLayout>
